--- a/index.html
+++ b/index.html
@@ -1,314 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Builder</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://bootswatch.com/5/lumen/bootstrap.min.css"
-      integrity="undefined"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
   </head>
-  <div class="container p-3" id="cv-form">
-    <h1 class="text-center mt-1">Resume Builder - Alpha Release</h1>
-    <div class="row">
-      <!-- first column -->
-      <div class="col-md-4">
-        <h3>Personal Info</h3>
-        <form action="#" autocomplete="off" id="myForm1">
-          <div class="form-group">
-            <label for="name">Your Name</label>
-            <input type="text" class="form-control" id="namefield" />
-          </div>
-          <div class="form-group mt-2">
-            <label for="name">Your Age</label>
-            <input type="text" class="form-control" id="agefield" />
-          </div>
-          <div class="form-group mt-2">
-            <label for="name">Your Gender</label>
-            <select name="gender" id="genderfield" class="form-control">
-              <option value="Male">Male</option>
-              <option value="Female">Female</option>
-            </select>
-            <!-- <input type="text" class="form-control" id="genderfield" /> -->
-          </div>
-          <div class="form-group mt-3">
-            <label for="address">Your Address</label>
-            <textarea
-              type="text"
-              rows="5"
-              class="form-control"
-              id="address"
-            ></textarea>
-          </div>
-          <div class="form-group mt-3">
-            <label for="contact">Your Phone</label>
-            <input type="text" class="form-control" id="contact" />
-          </div>
-          <div class="form-group mt-3">
-            <label for="contact">Your Email</label>
-            <input type="text" class="form-control" id="email" />
-          </div>
-          <div class="form-group mt-3">
-            <label for="">Select Photo</label>
-            <input id="imgField" type="file" class="form-control" />
-          </div>
+  <body id="inbody">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="assets/img/logo.png" width="50px" alt=""></a>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home
+              </a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="#template">Templates</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <a class="btn btn-secondary text-dark" href="sign-in.html">Sign in</a>
 
-          <p class="mt-3 text-primary">Social Links</p>
-          <div class="form-group mt-3">
-            <label for="facebook">Facebook</label>
-            <input type="text" class="form-control" id="facebook" />
-          </div>
-          <div class="form-group mt-3">
-            <label for="insta">Instagram</label>
-            <input type="text" class="form-control" id="insta" />
-          </div>
-          <div class="form-group mt-3">
-            <label for="linkedin">LinkedIn</label>
-            <input type="text" class="form-control" id="linkedin" />
-          </div>
-        </form>
-      </div>
-
-      <!-- second column -->
-      <div class="col-md-4">
-        <h3>Professional Info</h3>
-        <form action="#" autocomplete="off" id="myForm2">
-          <label for="jobfield">Job</label>
-          <input type="text" class="form-control mt-2" id="jobfield" />
-          <div class="form-group mt-3">
-            <label for="">Objectives</label>
-            <textarea
-              type="text"
-              class="form-control"
-              rows="4"
-              id="objective"
-            ></textarea>
-          </div>
-          <div class="form-group mt-3" id="we">
-            <label for="">Work Experience</label>
-            <textarea
-              type="text"
-              class="form-control workExp"
-              rows="3"
-              id="workExp"
-            ></textarea>
-            <div class="container mt-3" id="wAddBtn">
-              <button class="btn btn-info text-white" onclick="addWxp()">
-                Add
-              </button>
-            </div>
-          </div>
-          <div class="form-group mt-3" id="Qual">
-            <label for="">Qualification</label>
-            <textarea
-              type="text"
-              class="form-control qual"
-              id="qual"
-              rows="3"
-            ></textarea>
-            <div class="container mt-3" id="QaddBtn">
-              <button class="btn btn-info text-white" onclick="addQual()">
-                Add
-              </button>
-            </div>
-          </div>
-          <h4 class="mt-2">Skills</h4>
-          <small class="text-muted">Ex: HTML ,CSS , Photoshop</small>
-
-          <input type="text" class="form-control" id="skillfield1" />
-          <input
-            type="range"
-            id="range1"
-            name="vol"
-            min="0"
-            max="100"
-            step="10"
-            class="form-range"
-          />
-          <input type="text" class="form-control" id="skillfield2" />
-          <input
-            type="range"
-            id="range2"
-            name="vol"
-            min="0"
-            max="100"
-            step="10"
-            class="form-range"
-          />
-          <input type="text" class="form-control" id="skillfield3" />
-          <input
-            type="range"
-            id="range3"
-            name="vol"
-            min="0"
-            max="100"
-            step="10"
-            class="form-range"
-          />
-          <input type="text" class="form-control" id="skillfield4" />
-          <input
-            type="range"
-            id="range4"
-            name="vol"
-            min="0"
-            max="100"
-            step="10"
-            class="form-range"
-          />
-        </form>
-      </div>
-
-      <div class="container mt-5 text-center">
-        <button onclick="generateCv()" class="btn btn-dark btn-lg">
-          Generate CV
-        </button>
-        <button class="btn btn-danger btn-lg" id="reset">Reset</button>
-        <button class="btn btn-info btn-lg" onclick="autoFill();">
-          Auto fill sample
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <!-- cv template -->
-  <div class="container p-3" id="cv-template">
-    <div class="row">
-      <!-- first col -->
-      <div class="col-md-3 p-2 fc">
-        <img src="avatar.jpg" alt="" class="profile" id="imgTemplate" />
-        <div class="container fc mt-3">
-          <h3 class="about_me">ABOUT ME</h3>
-          <p id="Tname1">John Cena</p>
-          <p id="Tage">Age: 20</p>
-          <p id="Tgender">Gender: Male</p>
-          <h3 class="about_me mt-3">CONTACT</h3>
-          <p id="Taddress">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo,
-            voluptatibus!
-          </p>
-          <p id="Tcontact">987645130</p>
-          <p id="Temail">John@example.com</p>
-
-          <h3 class="about_me mt-3">SOCIAL LINKS</h3>
-          <p><a id="Tfb" href="#">Facebook</a></p>
-          <p><a id="Tinsta" href="#">Instagram</a></p>
-          <p><a id="Tlinked" href="#">LinkedIn</a></p>
-          <h3 class="about_me mt-3">Skills</h3>
-          <div class="progress mb-1">
-            <div
-              id="progress1"
-              class="progress-bar"
-              role="progressbar"
-              style="width: 90%"
-              aria-valuenow="90"
-              aria-valuemin="10"
-              aria-valuemax="100"
-            >
-              <p id="skillname1">Html</p>
-            </div>
-          </div>
-          <div class="progress mb-1">
-            <div
-              id="progress2"
-              class="progress-bar bg-success"
-              role="progressbar"
-              style="width: 50%"
-              aria-valuenow="50"
-              aria-valuemin="10"
-              aria-valuemax="100"
-            >
-              <p id="skillname2">Html</p>
-            </div>
-          </div>
-          <div class="progress mb-1">
-            <div
-              id="progress3"
-              class="progress-bar bg-warning"
-              role="progressbar"
-              style="width: 40%"
-              aria-valuenow="40"
-              aria-valuemin="10"
-              aria-valuemax="100"
-            >
-              <p id="skillname3">Html</p>
-            </div>
-          </div>
-          <div class="progress">
-            <div
-              id="progress4"
-              class="progress-bar bg-danger"
-              role="progressbar"
-              style="width: 70%"
-              aria-valuenow="70"
-              aria-valuemin="10"
-              aria-valuemax="100"
-            >
-              <p id="skillname4">Html</p>
-            </div>
-          </div>
+          </form>
         </div>
       </div>
-      <!-- second col -->
-      <div class="col-md-6 py-3 sc">
-        <h1 class="text-center" style="font-weight: 900" id="Tname2">
-          John Cena
-        </h1>
-        <span class="badge bg-light text-center" id="Tjob">Web Developer</span>
-        <!-- objective card -->
-        <div class="card mt-4">
-          <div class="card-header">
-            <h3>Objectives</h3>
-          </div>
-          <div class="card-body">
-            <p id="Tobjectives">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Doloremque, non.
-            </p>
-          </div>
-        </div>
-        <!-- work experience -->
-        <div class="card mt-4">
-          <div class="card-header">
-            <h3>Work Experience</h3>
-          </div>
-          <div class="card-body">
-            <ul id="TWexp">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
-          </div>
-        </div>
-        <!-- Qualification -->
-        <div class="card mt-4">
-          <div class="card-header">
-            <h3>Qualification</h3>
-          </div>
-          <div class="card-body">
-            <ul id="TQual">
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-              <li>Lorem ipsum dolor sit amet.</li>
-            </ul>
-          </div>
-        </div>
-        <div class="container mt-3 text-center">
-          <button class="btn btn-warning" id="edit-cv" onclick="EditForm()">Edit</button>
-          <button class="btn btn-dark" id="print-cv" onclick="printCv()">
-            Print cv
-          </button>
-        </div>
+    </nav>
+    <section class="header">
+      <div class="header-container">
+        <h1>Resume Builder</h1>
+        <p>Creating a Professional Resume
+          <br>
+          Has Never been
+          <b>So Easy</b>
+        </p>
+        <a class="btn btn-warning" href="sign-up.html">Get Started</a>
       </div>
-    </div>
-  </div>
+      <div class="resume-card" id="template">
+        <a href="resume.html"><img src="assets/img/card1.png" alt=""></a>
+        <a href="resume.html"><img src="assets/img/card2.png" alt=""></a>
+        <a href="resume.html"><img src="assets/img/card3.png" alt=""></a>
+        <a href="resume.html"><img src="assets/img/card4.png" alt=""></a>
+        <a href="resume.html"><img src="assets/img/card5.jpg" alt=""></a>
 
-  <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-    <script src="html2pdf.bundle.min.js"></script>
-    <script src="script.js"></script>
+
+      </div>
+    </section>
   </body>
 </html>
