added new resume template

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <a class="btn btn-warning" href="sign-up.html">Get Started</a>
       </div>
       <div class="resume-card" id="template">
-        <a href="resume.html"><img src="assets/img/card1.png" alt=""></a>
-        <a href="resume.html"><img src="assets/img/card2.png" alt=""></a>
-        <a href="resume.html"><img src="assets/img/card3.png" alt=""></a>
-        <a href="resume.html"><img src="assets/img/card4.png" alt=""></a>
-        <a href="resume.html"><img src="assets/img/card5.jpg" alt=""></a>
+        <a href="resume.html" ><img src="assets/img/card1.png" class="re-card" alt=""></a>
+        <a href="resume2.html"><img src="assets/img/card2.png" class="re-card"  alt=""></a>
+        <a href="resume3.html"><img src="assets/img/card3.png" class="re-card" alt=""></a>
+        <a href="resume4.html"><img src="assets/img/card4.png" class="re-card" alt=""></a>
+        <!-- <a href="resume.html"><img src="assets/img/card5.jpg" class="re-card" alt=""></a> -->
 
 
       </div>
